Fixed bug too large on mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -378,6 +378,18 @@ h2 {
     padding-left: 5px;
 }
 
+@media screen and (max-width: 480px) {
+    .date {
+        width: auto;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .day {
+        width: auto;
+    }
+}
+
 @media screen and (max-height: 712px) {
     h2.column-title {
         font-size: 13px;
